k8s/ingress/001a_apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coffee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tea
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: f5-hello-world
 namespace: default
spec:
 replicas: 2
 selector:
   matchLabels:
     app: f5-hello-world
 template:
   metadata:
     labels:
       app: f5-hello-world
   spec:
     containers:
     - env:
       - name: service_name
         value: f5-hello-world
       image: f5devcentral/f5-hello-world:latest
       imagePullPolicy: Always
       name: f5-hello-world
       ports:
       - containerPort: 8080
         protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
 name: f5-hello-world
 labels:
spec:
 ports:
 - port: 80
   protocol: TCP
   targetPort: 8080
 selector:
   app: f5-hello-world
