k8s/ingress/001b_apps-shared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee-2
  template:
    metadata:
      labels:
        app: coffee-2
    spec:
      containers:
      - name: coffee-2
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc-2
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: coffee-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tea-2
  template:
    metadata:
      labels:
        app: tea-2
    spec:
      containers:
      - name: tea-2
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc-2
  labels:
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: f5-hello-world-2
 namespace: default
spec:
 replicas: 2
 selector:
   matchLabels:
     app: f5-hello-world-2
 template:
   metadata:
     labels:
       app: f5-hello-world-2
   spec:
     containers:
     - env:
       - name: service_name
         value: f5-hello-world-2
       image: f5devcentral/f5-hello-world:latest
       imagePullPolicy: Always
       name: f5-hello-world-2
       ports:
       - containerPort: 8080
         protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
 name: f5-hello-world-2
 labels:
spec:
 ports:
 - port: 80
   protocol: TCP
   targetPort: 8080
 selector:
   app: f5-hello-world-2
