k8s/ingress/002b_app2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: singleingress2
 namespace: default
 annotations:
 # See the k8s-bigip-ctlr documentation for information about
 # all Ingress Annotations
 # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-ingress-annotations
   virtual-server.f5.com/ip: "10.1.10.81"
   virtual-server.f5.com/http-port: "443"
   virtual-server.f5.com/partition: "kubernetes_AS3"
   virtual-server.f5.com/health: '[{"path": "/", "send": "HTTP GET /", "interval": 5, "timeout": 10}]'
spec:
 backend:
   # The name of the Service you want to expose to external traffic
   serviceName: tea-svc
   servicePort: 80
