k8s/ingress/004a_adv-ingress-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: singleingress7
  namespace: default
  annotations:
    # Provide an IP address for the BIG-IP pool you want to handle traffic.
    virtual-server.f5.com/ip: "10.1.10.90"
    # Specify the BIG-IP partition containing the virtual server.
    virtual-server.f5.com/partition: "kubernetes"
    # Allow/deny TLS connections
    ingress.kubernetes.io/ssl-redirect: "false"
    # Allow/deny HTTP connections
    ingress.kubernetes.io/allow-http: "true"
spec:
  tls:
    # Specifies an already-configured SSL Profile on BIG-IP that should be
    # used for this Ingress.
    # Follows the format "/partition/profile_name".
    - secretName: /Common/clientssl
  backend:
    # The name of a single Kubernetes Service you want to expose to external
    # traffic using TLS
    serviceName: coffee-svc
    servicePort: 80
