k8s/ingress/004b_adv-ingress-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: singleingress8
  namespace: default
  annotations:
    # Provide an IP address for the BIG-IP pool you want to handle traffic.
    virtual-server.f5.com/ip: "10.1.10.91"
    # Specify the BIG-IP partition containing the virtual server.
    virtual-server.f5.com/partition: "kubernetes"
    # Allow/deny TLS connections
    ingress.kubernetes.io/ssl-redirect: "false"
    # Allow/deny HTTP connections
    ingress.kubernetes.io/allow-http: "true"
    virtual-server.f5.com/health: '[{"path": "/", "send": "HTTP GET /", "interval": 5, "timeout": 10}]'
spec:
  tls:
    # Specifies an already-configured SSL Profile on BIG-IP that should be
    # used for this Ingress.
    # Follows the format "/partition/profile_name".
    - secretName: ingress-example-secret-tls
  backend:
    # The name of a single Kubernetes Service you want to expose to external
    # traffic using TLS
    serviceName: coffee-svc
    servicePort: 80

#
#

apiVersion: v1
kind: Secret
metadata:
  name: ingress-example-secret-tls
  namespace: default
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMwRENDQWJpZ0F3SUJBZ0lFRkZGd05qQU5CZ2txaGtpRzl3MEJBUXNGQURBcU1Rc3dDUVlEVlFRR0V3SlYKVXpFYk1Ca0dBMVVFQXhNU2F6aHpMblJzYzNObFkzSmxkQzUwWlhOME1CNFhEVEl3TVRBeU1ERTNNVGMwTWxvWApEVEl4TVRBeU1ERTNNVGMwTWxvd0tqRUxNQWtHQTFVRUJoTUNWVk14R3pBWkJnTlZCQU1URW1zNGN5NTBiSE56ClpXTnlaWFF1ZEdWemREQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUp2N0dZWUYKN3ZQOFhqS1dzQkI1SkFMaUsvR2R6STNUV2xjY1NBSUZaVFJ2SkUrUHNtK0M5NGNTOGl1QjNQN1RBZUhVNHZKLwp1SXBjdnhPL2VKTFVSV [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ2IreG1HQmU3ei9GNHkKbHJBUWVTUUM0aXZ4bmN5TjAxcFhIRWdDQldVMGJ5UlBqN0p2Z3ZlSEV2SXJnZHorMHdIaDFPTHlmN2lLWEw4VAp2M2lTMUVVN0Zxb2NrODIwMjFnTjM5L2VZY3RsU2VTbEpUN3pyMk5vNTBwNkxJVmFZdDVSRTVEeGlmRWxRT1ArCnlncUZGYy8zMHB1WHlsY0lodUt6UTVBWWRnSW9YWE04ZTQ2dEZmekdEZHVzblpDUXpNZlFONDFCaEJrNzkyVEIKdnJhOHV3MEp4bmNVUktHOWpwNlJVcDJQeE5NNUYyTVdSOUFwS25lOHdCZ1JmU3NkVHd3aldyRTFLOWR4RTloZgpWOThONCtpdnNvdEx1Y [...]
type: kubernetes.io/tls
