k8s/ingress/004c_adv-ingress-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: singleingress8
  namespace: default
  annotations:
    # Provide an IP address for the BIG-IP pool you want to handle traffic.
    virtual-server.f5.com/ip: "10.1.10.91"
    # Specify the BIG-IP partition containing the virtual server.
    virtual-server.f5.com/partition: "kubernetes"
    # Allow/deny TLS connections
    ingress.kubernetes.io/ssl-redirect: "false"
    # Allow/deny HTTP connections
    ingress.kubernetes.io/allow-http: "true"
    virtual-server.f5.com/health: '[{"path": "/", "send": "HTTP GET /", "interval": 5, "timeout": 10}]'

spec:
  tls:
  - hosts:
    - mysite.foo.com
    #Referencing this secret in an Ingress tells the Ingress controller to
    #secure the channel from the client to the load balancer using TLS
    secretName: ingress-example-secret-tls
  rules:
    - host: mysite.example.com
      http:
      # path to Service from URL
        paths:
        - path: /
          backend:
            serviceName: coffee-svc
            servicePort: 80
